kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tictaktoe-deployment
  namespace: tictaktoe
  labels:
    app: tictaktoe
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tictaktoe
  template:
    metadata:
      labels:
        app: tictaktoe
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: tictaktoe
        image: ghcr.io/Kihara-Njoroge/tictaktoe-devsecops:sha-b97b2f0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
